--- a/enigme.html
+++ b/enigme.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Black Panther</title>
+  <title></title>
 </head>
-  <header></header>
-  <main></main>
-  <footer></footer>
+
 <body>
 
 </body>
