structuration of desc,perso , correction head

--- a/index.html
+++ b/index.html
@@ -4,13 +4,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <title>Black Panther</title>
 </head>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  
 <body>
-
+  <header>
+    <nav>
+      <ul>
+        <li>ACCUEIL</li>
+        <li>WAKANDA</li>
+        <li>ÉNIGME</li>
+      </ul>
+    </nav>
+    <picture class="social-media-fixed">
+      <img src="" alt="link to contact from facebook account">
+      <img src="" alt="link to contact from instagram account">
+      <img src="" alt="link to contact from twitter account">
+      <img src="" alt="link to contact from tikrok account ">
+    </picture>
+    <p>
+      <h1>BLACK PANTHER</h1>
+      <h2>WAKANDA FOREVER</h2>
+      EN plus d'être un film qui fait la part belle aux héroïnes,Black Panther rend hommage aux cultures africaines et afro américaine.On y évoque le racisme la colorisation et la violence contre les afro américains.Ce fim marque toute une génération."C'est 100% afri cain et c'est parfait"
+    </p>
+    <img src="" alt="pictures of black panther and his human form">
+  </header>
+  <main>
+  
+    <section class="personage-wakanda">
+      <figure>
+        <img src="" alt="rival-Black-Panther">
+        <figcaption></figcaption>
+      </figure>
+      <figure>
+        <img src="" alt="right-arms-Black-panther">
+        <figcaption></figcaption>
+      </figure>
+      <figure>
+        <img src="" alt="Black-panther-sister">
+        <figcaption></figcaption>
+      </figure>
+    </section>
+    <section class="black-panther-description">
+      <p class="description">
+        <h3>NAISSANCE D'UN PRINCE</h3>
+      </p>
+      <p class="description">
+        <h3>LE HEROS VENGEUR</h3>
+      </p>
+      <p class="description">
+        <h3>UN HEROS PROTECTEUR ET JUSTICIER</h3>
+      </p>
+    </section>
+    <aside>
+      
+    </aside>
+    <form action="">
+      <p>Besoin de l'intervention du wakanda ?</p>
+      <h2>Contactez nous</h2>
+      <input type="text" name="nom" id="nom" value="" placeholder="Nom"/>
+      <input type="email" name="Email" id="Email" value="" placeholder="Email"/>
+      <textarea name="" id="message" cols="30" rows="10"></textarea>
+      <input type="submit" value="Envoyer">
+    </form>
+  </main>
+  <footer>
+    <nav>
+      <h3>PAGES</h3>
+      <ul>
+        <li>À propos </li>
+      </ul>
+    </nav>
+    <picture class="social-media-footer">
+      <img src="" alt="link to contact from facebook account">
+      <img src="" alt="link to contact from instagram account">
+      <img src="" alt="link to contact from twitter account">
+      <img src="" alt="link to contact from tikrok account ">
+    </picture>
+  </footer>
 </body>
 
 </html>
