chang du display de perso , ajout d une new img

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
       </p>
     </section>
     <aside>
-      
+      <img src="" alt="picture of black panther human form in wakanda">
+      <div>
+        
+      </div>
     </aside>
     <form action="">
       <p>Besoin de l'intervention du wakanda ?</p>
