mise en forme du formulaire

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h2>Contactez nous</h2>
           <input type="text" id="nom" placeholder="Nom" /><br />
           <input type="email" id="Email" placeholder="Email" /><br />
-          <textarea id="message" cols="30" rows="10"> </textarea><br />
+          <textarea id="message" cols="30" rows="10">Message </textarea><br />
 
           <input type="submit" value="Envoyer" /><br />
         </form>
