rectification des images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+< !DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -6,49 +6,35 @@
     <link rel="stylesheet" href="style.css" />
     <title>Black Panther</title>
   </head>
-
   <body>
     <header>
       <nav>
-        <picture>
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_MARVEL.png"
+        <picture
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+            alt="logo de sayna" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_x.png"
+            alt="x icon" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
             alt="logo de marvel"
-          />
-        </picture>
+        /></picture>
         <ul>
           <li>ACCUEIL</li>
           <li>WAKANDA</li>
           <li>ÉNIGME</li>
         </ul>
       </nav>
-      <picture class="social-media-fixed">
-        <img
-          src="./images/Illustrations + Logo/All pages/icon_facebook.png"
-          alt="link to contact from facebook account"
-        />
-        <img
-          src="./images/Illustrations + Logo/All pages/icon_instagram.png"
-          alt="link to contact from instagram account"
-        />
-        <img
-          src="./images/Illustrations + Logo/All pages/icon_twitter.png"
-          alt="link to contact from twitter account"
-        />
-        <img
-          src="./images/Illustrations + Logo/All pages/icon_tiktok.png"
+      <picture class="social-media-fixed"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+          alt="link to contact from facebook account" /><img
+          src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+          alt="link to contact from instagram account" /><img
+          src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+          alt="link to contact from twitter account" /><img
+          src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
           alt="link to contact from tikrok account "
-        />
-      </picture>
-
+      /></picture>
       <div class="hero">
         <div>
           <h1>BLACK PANTHER</h1>
@@ -62,7 +48,7 @@
           </p>
         </div>
         <img
-          src="./images/Illustrations + Logo/Accueil/Pantherhome1.png"
+          src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
           alt="pictures of black panther and his human form"
         />
       </div>
@@ -88,12 +74,10 @@
             <h3>NAISSANCE D'UN PRINCE</h3>
             <p></p>
           </section>
-
           <section class="description">
             <h3>LE HEROS VENGEUR</h3>
             <p></p>
           </section>
-
           <section class="description">
             <h3>UN HEROS PROTECTEUR ET JUSTICIER</h3>
             <p></p>
@@ -104,36 +88,30 @@
           <div></div>
         </aside>
       </div>
-
       <div id="contact">
         <form action="">
           <p>Besoin de l'intervention du wakanda ?</p>
           <h2>Contactez nous</h2>
-          <input type="text" id="nom" placeholder="Nom" /><br />
-          <input type="email" id="Email" placeholder="Email" /><br />
-          <textarea id="message" cols="30" rows="10">Message </textarea><br />
-
-          <input type="submit" value="Envoyer" /><br />
+          <input type="text" id="nom" placeholder="Nom" /><br /><input
+            type="email"
+            id="Email"
+            placeholder="Email"
+          /><br /><textarea id="message" cols="30" rows="10">Message </textarea
+          ><br /><input type="submit" value="Envoyer" /><br />
         </form>
       </div>
     </main>
-
     <footer>
       <div>
-        <picture class="">
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_MARVEL.png"
+        <picture class=""
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+            alt="logo de sayna" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_x.png"
+            alt="x icon" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
             alt="logo de marvel"
-          />
-        </picture>
+        /></picture>
         <h3>PAGES</h3>
         <ul>
           <li>À propos</li>
@@ -142,24 +120,17 @@
       </div>
       <div>
         <h3>Retrouvez nous</h3>
-        <picture class="social-media-footer">
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_facebook.png"
-            alt="link to contact from facebook account"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_instagram.png"
-            alt="link to contact from instagram account"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_twitter.png"
-            alt="link to contact from twitter account"
-          />
-          <img
-            src="./images/Illustrations + Logo/All pages/icon_tiktok.png"
+        <picture class="social-media-footer"
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+            alt="link to contact from facebook account" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+            alt="link to contact from instagram account" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+            alt="link to contact from twitter account" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
             alt="link to contact from tiktok account "
-          />
-        </picture>
+        /></picture>
       </div>
       <p>
         2022 Tous droits réservés Politique de confidentialité Conditions
