--- a/index.html
+++ b/index.html
@@ -56,31 +56,161 @@
     <main>
       <div class="content-principal">
         <section class="personage-wakanda">
-          <figure>
-            <img src="" alt="rival-Black-Panther" />
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <img src="" alt="right-arms-Black-panther" />
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <img src="" alt="Black-panther-sister" />
-            <figcaption></figcaption>
-          </figure>
+          <div class="perso">
+            <figure>
+              <img
+                class="perso-img"
+                src="./images/Illustrations+Logo/Accueil/KillMonger.png"
+                alt="rival-Black-Panther"
+              />
+              <div class="perso-desc">
+                <h2>KILLMONGER</h2>
+                <p>
+                  La sauvagerie de N'Jadaka alors qu'il servait dans une unité
+                  d'opérations noires de l'armée américaine lui a valu le surnom
+                  de Killmonger. D’origine Wakandaise, et se sentant abandoné
+                  par sa nation, il cherche à détroner T’Challa dans une quête
+                  vers le pourvoir.
+                </p>
+                <span>Voir plus &gt;</span>
+              </div>
+            </figure>
+            <figure>
+              <div class="perso-img">
+                <img
+                  src="./images/Illustrations+Logo/Accueil/Okoye.png"
+                  alt="right-arms-Black-panther"
+                />
+              </div>
+              <div class="perso-desc">
+                <h3>OKOYE</h3>
+                <p>
+                  Okoye est le général des Dora Milaje (groupe d’élite de femmes
+                  guerrières) et le chef des forces armées et des renseignements
+                  wakandais. Témoin du couronnement de T'Challa, elle
+                </p>
+                <br />
+                <span class="plus">Voir plus &gt;</span>
+              </div>
+            </figure>
+            <figure>
+              <img
+                src="./images/Illustrations+Logo/Accueil/BlackPanthersister.png"
+                alt="Black-panther-sister"
+                class="perso-img"
+              />
+            </figure>
+          </div>
         </section>
         <article class="black-panther-description">
           <section class="description">
-            <h3>NAISSANCE D'UN PRINCE</h3>
-            <p></p>
+            <h2>NAISSANCE D'UN PRINCE</h2>
+            <p>
+              T'Challa est né au Wakanda, un pays isolationniste situé en
+              Afrique, du monarque régnant T'Chaka et de sa femme Ramonda. Il a
+              finalement eu une soeur cadette nommée Shuri. S'entraînant toute
+              sa vie pour prendre la place de son père en tant que prochain
+              Black Panther, T'Challa est devenu un homme avec un esprit très
+              actif et malgré tous les efforts de T'Chaka, une grande aversion
+              pour la politique.
+            </p>
+            <p>
+              T'Challa est poli, respectueux et très attentionné envers les gens
+              qu'il côtoie et qu'il considère comme ses amis. Il est démontré
+              qu'il a un grand respect envers les autres, en particulier envers
+              son père, T'Chaka. Il honore la tradition et les principes du
+              Wakanda et est prêt à agir chaque fois que cela est nécessaire. À
+              la mort de son père, il était disposé et prêt à prendre la place
+              qui lui revenait en tant que roi du Wakanda. Bien qu'il ne semble
+              pas privilégier les combats, il a très vite tenté de venger la
+              mort de son père. Combattant honorable, T'Challa respecte ses
+              adversaires et est prêt à épargner la vie de ses ennemis. Cela
+              étant dit, il n'est pas opposé à tuer ses adversaires dans un
+              combat et n'essaie pas toujours d'éviter les mesures mortelles de
+              les neutraliser.
+            </p>
+            <p>
+              « Toute ma vie, je l'ai regardé porter le costume. Il pouvait
+              soulever un homme à une seule main et courir aussi vite qu'un
+              zèbre. Puis il m'a dit qu'il était trop vieux pour continuer à
+              endosser le rôle de Black Panther; il me l'a alors passé afin de
+              simplement rester roi. – Il me disait qu'il ne pouvait plus
+              rentrer dans le costume. » — T'Challa et Zuri
+            </p>
           </section>
           <section class="description">
-            <h3>LE HEROS VENGEUR</h3>
-            <p></p>
+            <h2>LE HEROS VENGEUR</h2>
+            <p>
+              « La mort, dans notre culture, n'est pas la fin. Pour nous, c'est
+              plutôt un point de départ. Le défunt n'a qu'à tendre les bras; et
+              Bast et Sekhmet le guident jusqu'à l'entrée de la grande vallée où
+              il résidera à tout jamais. – C'est une vision très pacifique. – À
+              l'image de mon père. Je ne suis pas mon père. » — T'Challa et
+              Natasha Romanoff
+            </p>
+            <p>
+              Suite à la mort de son père dans l'attentat à la bombe orchestré
+              par Helmut Zemo, terroriste souhaitant la chute des Avengers,
+              T'Challa avait entrepris de tuer le Soldat de l'hiver, qui était
+              largement considéré (à tort) comme responsable de l'attaque. Au
+              cours de sa tentative de trouver le Soldat de l'hiver, Black
+              Panther avait rejoint une guerre civile entre les Avengers, où il
+              s'était rangé du côté d'Iron Man. T’Challa est alors animé par son
+              désir de vengeance de la mort de son père, ce qu’il partage avec
+              Iron Man, tous deux victimes de l’assassinat de leurs parents.
+            </p>
+            <p>
+              Cependant, Black Panther apprend finalement en capturant Zemo, que
+              c’était lui le seul responsable de la mort de son père, et que le
+              Soldat de l’hiver n’était alors qu’une arme entre les mains de
+              Zemo. Se rendant compte de la supercherie ainsi que de la voie
+              sombre de la vengeance, T’Challa se promet de ne plus permettre
+              aux désirs de vengeance de le consumer à nouveau.
+            </p>
+            <p>
+              « Quelle est la meilleure façon de protéger le Wakanda ? Je dois
+              devenir un grand roi baba, comme tu l'étais. – Tu devras lutter.
+              Pour ça, il te faudra t'entourer de personnes de confiance. Tu es
+              un homme bon, avec un grand coeur. C'est difficile pour un homme
+              bon d'être roi. » — T'Challa et T'Chaka
+            </p>
           </section>
           <section class="description">
-            <h3>UN HEROS PROTECTEUR ET JUSTICIER</h3>
-            <p></p>
+            <h2>UN HEROS PROTECTEUR ET JUSTICIER</h2>
+            <p>
+              « Tu as eu tort ! Vous avez tous eu tort ! Il ne fallait pas
+              tourner le dos au reste du monde. Nous avons laissé la peur d’être
+              découverts nous empêcher de faire ce qui était juste. Non père,
+              non je ne peux pas rester ici avec toi. Tant qu’il sera sur le
+              trône, je ne saurai trouver le repos. C’est un monstre et c’est
+              nous qui l’avons créé. Il faut que je reprenne le pouvoir, il le
+              faut ! Il faut que je corrige ces injustices. » — T'Challa à
+              T'Chaka
+            </p>
+            <p>
+              Il y a des siècles, alors que cinq tribus africaines se
+              disputaient une météorite composée de vibranium métallique
+              extraterrestre, un chaman guerrier Bashenga, guidé par la déesse
+              panthère Bast, ingère une herbe en forme de coeur affectée par le
+              métal et acquiert des capacités surhumaines. Devenu le premier
+              "Black Panther", il unit toutes les tribus sauf la tribu des
+              Jabari, et forme la nation du Wakanda. Au fil du temps, les
+              Wakandains utilisent le vibranium pour développer une technologie
+              de pointe tout en s'isolant du reste du monde et en se faisant
+              passer pour un pays du tiers monde.
+            </p>
+            <p>
+              Il y a des siècles, alors que cinq tribus africaines se
+              disputaient une météorite composée de vibranium métallique
+              extraterrestre, un chaman guerrier Bashenga, guidé par la déesse
+              panthère Bast, ingère une herbe en forme de coeur affectée par le
+              métal et acquiert des capacités surhumaines. Devenu le premier
+              "Black Panther", il unit toutes les tribus sauf la tribu des
+              Jabari, et forme la nation du Wakanda. Au fil du temps, les
+              Wakandains utilisent le vibranium pour développer une technologie
+              de pointe tout en s'isolant du reste du monde et en se faisant
+              passer pour un pays du tiers monde.
+            </p>
           </section>
         </article>
         <aside>
