mise en forme du css de footer

--- a/index.html
+++ b/index.html
@@ -12,29 +12,40 @@
         <picture
           ><img
             src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna" /><img
+            alt="logo de sayna"
+          />
+          <img
             src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon" /><img
+            alt="x icon"
+          />
+          <img
             src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
             alt="logo de marvel"
-        /></picture>
+          />
+        </picture>
         <ul>
-          <li>ACCUEIL</li>
-          <li>WAKANDA</li>
+          <li><a href="./index.html">ACCUEIL</a></li>
+          <li><a href="./"></a></li>
           <li>ÉNIGME</li>
         </ul>
       </nav>
       <picture class="social-media-fixed"
         ><img
           src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-          alt="link to contact from facebook account" /><img
+          alt="link to contact from facebook account"
+        />
+        <img
           src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-          alt="link to contact from instagram account" /><img
+          alt="link to contact from instagram account"
+        />
+        <img
           src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-          alt="link to contact from twitter account" /><img
+          alt="link to contact from twitter account"
+        /><img
           src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
           alt="link to contact from tikrok account "
-      /></picture>
+        />
+      </picture>
       <div class="hero">
         <div>
           <h1>BLACK PANTHER</h1>
@@ -72,7 +83,7 @@
                   par sa nation, il cherche à détroner T’Challa dans une quête
                   vers le pourvoir.
                 </p>
-                <span>Voir plus &gt;</span>
+                <span>Voir plus &gt; </span>
               </div>
             </figure>
             <figure>
@@ -89,8 +100,7 @@
                   guerrières) et le chef des forces armées et des renseignements
                   wakandais. Témoin du couronnement de T'Challa, elle
                 </p>
-                <br />
-                <span class="plus">Voir plus &gt;</span>
+                <br /><span class="plus">Voir plus &gt; </span>
               </div>
             </figure>
             <figure>
@@ -232,23 +242,23 @@
       </div>
     </main>
     <footer>
-      <div>
-        <picture class=""
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna" /><img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon" /><img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-        /></picture>
+      <picture class="logo-sayna"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+          alt="logo de sayna" /><img
+          src="./images/Illustrations+Logo/All-pages/icon_x.png"
+          alt="x icon" /><img
+          src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+          alt="logo de marvel"
+      /></picture>
+      <div id="pages">
         <h3>PAGES</h3>
         <ul>
           <li>À propos</li>
           <li>Wakanda</li>
         </ul>
       </div>
-      <div>
+      <div id="social-media-ft">
         <h3>Retrouvez nous</h3>
         <picture class="social-media-footer"
           ><img
