carte de tchalla

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -25,8 +25,8 @@
         </picture>
         <ul>
           <li><a href="./index.html">ACCUEIL</a></li>
-          <li><a href="./"></a></li>
-          <li>ÉNIGME</li>
+          <li><a href="./wakanda.html">WAKANDA</a></li>
+          <li><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
       <picture class="social-media-fixed"
@@ -224,8 +224,39 @@
           </section>
         </article>
         <aside>
-          <img src="" alt="picture of black panther human form in wakanda" />
-          <div></div>
+          <div>
+            <img
+              src="./images/Illustrations+Logo/Accueil/Tchalla.png"
+              alt="picture of black panther human form in wakanda"
+            />
+            <div>
+              <h3>T'Challa</h3>
+              <div>
+                <span class="tchalla-description">Black Panther</span>
+                <span class="tchalla-description">Roi du Wakanda</span>
+                <span class="tchalla-description">En vie</span>
+              </div>
+              <div>
+                <p>Acteur:<span> Chadwick Boseman</span></p>
+                <p>Apparition<span> Captain America Civil War (2016)</span></p>
+                <p>Espèce:<span> humain</span></p>
+                <p>Nationalité:<span> Wakandais</span></p>
+                <p>Sexe:<span> Homme</span></p>
+                <p>
+                  Decès:
+                  <span
+                    >31 mai 2018 (victime du Snap ; ressuscité par Hulk <br />
+                    en 2023) (2016)
+                  </span>
+                </p>
+                <p>Réalité:<span>Terre-199999</span></p>
+              </div>
+            </div>
+          </div>
+          <img
+            src="./images/Illustrations+Logo/Accueil/BlackpantherViolet.png"
+            alt=""
+          />
         </aside>
       </div>
       <div id="contact">
