--- a/wakanda.html
+++ b/wakanda.html
@@ -4,6 +4,161 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./wakanda.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <picture
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+            alt="logo de sayna"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_x.png"
+            alt="x icon"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+            alt="logo de marvel"
+          />
+        </picture>
+        <ul>
+          <li><a href="./index.html">ACCUEIL</a></li>
+          <li><a href="./wakanda.html">WAKANDA</a></li>
+          <li><a href="./enigme.html">ENIGME</a></li>
+        </ul>
+      </nav>
+      <picture class="social-media-fixed"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+          alt="link to contact from facebook account"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+          alt="link to contact from instagram account"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+          alt="link to contact from twitter account"
+        /><img
+          src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+          alt="link to contact from tikrok account "
+        />
+      </picture>
+    </header>
+    <main>
+      <article>
+        <h2>Origines</h2>
+        <div>
+          <p>
+            Avant l'émergence de la nation wakandaise, la mythologie du pays
+            parle des êtres mystiques connus sous le nom des « Originateurs »,
+            expulsés de la région par les Orishas, le panthéon du Wakanda
+            composé des dieux Thot, Ptah, Mujaji, Kokou et Bast la déesse
+            panthère.
+          </p>
+          <p>
+            La lignée royale du Wakanda débute avec Bashenga, supposé être le
+            troisième prince du pays et la première Panthère noire (Black
+            Panther), 10 000 ans avant T'Challa.
+          </p>
+          <p>
+            Dans l'histoire lointaine du royaume, une immense météorite s’écrasa
+            sur le futur Wakanda et provoqua la survenue d'une substance unique,
+            qui deviendra plus tard le vibranium. Les Wakandais apprendront au
+            fur et à mesure à utiliser ce métal pour forger leurs armes. Mais le
+            vibranium se révélera aussi avoir de fortes propriétés mutagènes qui
+            transformeront certaines hommes en monstres.
+          </p>
+          <p>
+            Le bouclier de Captain America (ère moderne) est composé en partie
+            de vibranium du Wakanda. Entouré de montagnes, les frontières du
+            Wakanda ont été soigneusement surveillées au cours des deux derniers
+            siècles, et toute tentative d’invasion a été repoussée. Jusqu’à ces
+            dernières années, le pays était si isolé que la plupart des
+            personnes sur Terre ignoraient son existence.
+          </p>
+          <p>
+            Lorsque des informations sur la présence de vibranium au Wakanda
+            commencèrent à se répandre durant la Seconde Guerre mondiale, le roi
+            T’Chaka passa un accord avec Captain America (Steve Rogers), lui
+            fournissant un échantillon de vibranium — qui allait être utilisé
+            peu de temps après par le métallurgiste américain Myron MacLain pour
+            former le bouclier rond du Captain.
+          </p>
+        </div>
+      </article>
+      <article>
+        <h2></h2>
+        <p></p>
+      </article>
+      <article>
+        <h2></h2>
+        <p></p>
+      </article>
+      <section></section>
+      <article>
+        <h2></h2>
+        <p></p>
+      </article>
+      <article>
+        <h2></h2>
+        <p></p>
+      </article>
+      <div></div>
+      <article>
+        <h2></h2>
+        <p></p>
+      </article>
+    </main>
+    <footer>
+      <picture class="logo-sayna"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+          alt="logo de sayna"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_x.png"
+          alt="x icon"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+          alt="logo de marvel"
+        />
+      </picture>
+      <div class="pages">
+        <h3>PAGES</h3>
+        <ul>
+          <li>À propos</li>
+          <li>Wakanda</li>
+        </ul>
+      </div>
+      <div class="social-media-ft">
+        <h3>Retrouvez nous</h3>
+        <picture class="social-media-footer"
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+            alt="link to contact from facebook account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+            alt="link to contact from instagram account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+            alt="link to contact from twitter account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+            alt="link to contact from tiktok account "
+          />
+        </picture>
+      </div>
+      <p>
+        2022 Tous droits réservés Politique de confidentialité Conditions
+        d’utilisation
+      </p>
+    </footer>
+  </body>
 </html>
