mise en forme des autres html,grid du main de wak

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
           alt="link to contact from tikrok account "
         />
       </picture>
-      <div class="hero">
+    </header>
+    <main>
+      <section class="hero">
         <div>
           <h1>BLACK PANTHER</h1>
           <h2>WAKANDA FOREVER</h2>
@@ -62,9 +64,7 @@
           src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
           alt="pictures of black panther and his human form"
         />
-      </div>
-    </header>
-    <main>
+      </section>
       <div class="content-principal">
         <section class="personage-wakanda">
           <div class="perso">
@@ -282,7 +282,7 @@
           src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
           alt="logo de marvel"
       /></picture>
-      <div id="pages">
+      <div class="pages">
         <h3>PAGES</h3>
         <ul>
           <li>À propos</li>
@@ -294,14 +294,21 @@
         <picture class="social-media-footer"
           ><img
             src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-            alt="link to contact from facebook account" /><img
+            alt="link to contact from facebook account"
+          />
+          <img
             src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-            alt="link to contact from instagram account" /><img
+            alt="link to contact from instagram account"
+          />
+          <img
             src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-            alt="link to contact from twitter account" /><img
+            alt="link to contact from twitter account"
+          />
+          <img
             src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
             alt="link to contact from tiktok account "
-        /></picture>
+          />
+        </picture>
       </div>
       <p>
         2022 Tous droits réservés Politique de confidentialité Conditions
