--- a/enigme.html
+++ b/enigme.html
@@ -1,14 +1,117 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <header>
+      <nav>
+        <picture
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+            alt="logo de sayna"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_x.png"
+            alt="x icon"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+            alt="logo de marvel"
+          />
+        </picture>
+        <ul>
+          <li><a href="./index.html">ACCUEIL</a></li>
+          <li><a href="./wakanda.html">WAKANDA</a></li>
+          <li><a href="./enigme.html">ENIGME</a></li>
+        </ul>
+      </nav>
+      <picture class="social-media-fixed"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+          alt="link to contact from facebook account"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+          alt="link to contact from instagram account"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+          alt="link to contact from twitter account"
+        /><img
+          src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+          alt="link to contact from tikrok account "
+        />
+      </picture>
+      <div class="hero">
+        <div>
+          <h1>BLACK PANTHER</h1>
+          <h2>WAKANDA FOREVER</h2>
+          <p>
+            EN plus d'être un film qui fait la part belle aux héroïnes,Black
+            Panther rend hommage aux cultures africaines et afro américaine.On y
+            évoque le racisme la colorisation et la violence contre les afro
+            américains.Ce fim marque toute une génération."C'est 100% afri cain
+            et c'est
+          </p>
+        </div>
+        <img
+          src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
+          alt="pictures of black panther and his human form"
+        />
+      </div>
+    </header>
+    <main></main>
+    <footer>
+      <picture class="logo-sayna"
+        ><img
+          src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+          alt="logo de sayna"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_x.png"
+          alt="x icon"
+        />
+        <img
+          src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+          alt="logo de marvel"
+        />
+      </picture>
+      <div class="pages">
+        <h3>PAGES</h3>
+        <ul>
+          <li>À propos</li>
+          <li>Wakanda</li>
+        </ul>
+      </div>
+      <div class="social-media-ft">
+        <h3>Retrouvez nous</h3>
+        <picture class="social-media-footer"
+          ><img
+            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+            alt="link to contact from facebook account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+            alt="link to contact from instagram account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+            alt="link to contact from twitter account"
+          />
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+            alt="link to contact from tiktok account "
+          />
+        </picture>
+      </div>
+      <p>
+        2022 Tous droits réservés Politique de confidentialité Conditions
+        d’utilisation
+      </p>
+    </footer>
+  </body>
 </html>
