correction de wakanda

--- a/enigme.html
+++ b/enigme.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+
+    <link rel="stylesheet" href="style.css" />
+    <title>Enigme</title>
   </head>
 
   <body>
@@ -29,42 +31,13 @@
           <li><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
-      <picture class="social-media-fixed"
-        ><img
-          src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-          alt="link to contact from facebook account"
-        />
-        <img
-          src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-          alt="link to contact from instagram account"
-        />
-        <img
-          src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-          alt="link to contact from twitter account"
-        /><img
-          src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-          alt="link to contact from tikrok account "
-        />
-      </picture>
-      <div class="hero">
-        <div>
-          <h1>BLACK PANTHER</h1>
-          <h2>WAKANDA FOREVER</h2>
-          <p>
-            EN plus d'être un film qui fait la part belle aux héroïnes,Black
-            Panther rend hommage aux cultures africaines et afro américaine.On y
-            évoque le racisme la colorisation et la violence contre les afro
-            américains.Ce fim marque toute une génération."C'est 100% afri cain
-            et c'est
-          </p>
-        </div>
-        <img
-          src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
-          alt="pictures of black panther and his human form"
-        />
-      </div>
     </header>
-    <main></main>
+    <main>
+      <section class="hero">
+        <div></div>
+        <img src="" alt="pictures of black panther and his human form" />
+      </section>
+    </main>
     <footer>
       <picture class="logo-sayna"
         ><img
