--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./home.css" />
     <title>Black Panther</title>
   </head>
   <body>
@@ -273,47 +274,72 @@
       </div>
     </main>
     <footer>
-      <picture class="logo-sayna"
-        ><img
-          src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-          alt="logo de sayna" /><img
-          src="./images/Illustrations+Logo/All-pages/icon_x.png"
-          alt="x icon" /><img
-          src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-          alt="logo de marvel"
-      /></picture>
-      <div class="pages">
-        <h3>PAGES</h3>
-        <ul>
-          <li>À propos</li>
-          <li>Wakanda</li>
-        </ul>
-      </div>
-      <div id="social-media-ft">
-        <h3>Retrouvez nous</h3>
-        <picture class="social-media-footer"
+      <div class="foot">
+        <picture class="logo-sayna"
           ><img
-            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-            alt="link to contact from facebook account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-            alt="link to contact from instagram account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-            alt="link to contact from twitter account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-            alt="link to contact from tiktok account "
-          />
-        </picture>
+            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+            alt="logo de sayna" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_x.png"
+            alt="x icon" /><img
+            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+            alt="logo de marvel"
+        /></picture>
+        <div class="pages">
+          <h3>PAGES</h3>
+          <ul>
+            <li>À propos</li>
+            <li>Wakanda</li>
+          </ul>
+        </div>
+        <div id="social-media-ft">
+          <h3>Retrouvez nous</h3>
+          <picture class="social-media-footer">
+            <a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+                alt="lien de connexion a facebook icon"
+              />
+            </a>
+            <a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+            >
+              <img
+                src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+                alt="link to contact from instagram account"
+              />
+            </a>
+            <a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+                alt="link to contact from twitter account"
+              />
+            </a>
+            <a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+                alt="link to contact from tikrok account "
+              />
+            </a>
+          </picture>
+        </div>
+        <p>
+          2022 Tous droits réservés Politique de confidentialité Conditions
+          d’utilisation
+        </p>
       </div>
-      <p>
-        2022 Tous droits réservés Politique de confidentialité Conditions
-        d’utilisation
-      </p>
     </footer>
   </body>
 </html>
