--- a/enigme.html
+++ b/enigme.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./enigme.css" />
     <title>Enigme</title>
   </head>
-
   <body>
     <header>
       <nav>
-        <picture
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
+        <picture>
+          <a href="./images/Illustrations+Logo/All-pages/icon_SAYNA.png">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
           <img
             src="./images/Illustrations+Logo/All-pages/icon_x.png"
             alt="x icon"
@@ -34,57 +35,103 @@
     </header>
     <main>
       <section class="hero">
-        <div></div>
-        <img src="" alt="pictures of black panther and his human form" />
+        <div class="hero-actor actor-image-enigme">
+          <img
+            src="./images/Illustrations+Logo/Enigme/Pantherenigme1.png"
+            alt=""
+          />
+        </div>
+        <div class="hero-text txt-enigme text-enigme">
+          <h1>RELEVE LE DEFI <br />DES DORA MILAJE</h1>
+          <p>
+            Les Dora Milaje sont de farouches guerrières d’élite. Elles
+            constituent la garde rapprochée du Roi en personne et ont de
+            nombreuses occasions de lui sauver la vie. Leur Générale, Okoyé est
+            également la dirigeante des forces armées et des renseignements
+            wakandais. Prouve ton talent d’espion et déchiffre cette réplique
+            d’Okoyé écrite en Wakandais, et apprend par la même occasion la
+            première valeur d’une Dora Milaje !
+          </p>
+        </div>
+      </section>
+      <section class="boxes">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+          voluptatum possimus obcaecati provident, quisquam, temporibus libero
+          autem nulla dicta maxime atque dolores sunt, cumque labore nam error
+          corrupti asperiores magnam.
+        </p>
+        <div class="quiz">
+          <div>
+            <form action="">
+              <p>Voici la transicription de l’alphabet :</p>
+              <p></p>
+              <label for="reponse">Alors as tu la réponse</label><br /><input
+                type="text"
+                placeholder="Réponse"
+              /><input type="submit" value="Envoyer" />
+            </form>
+          </div>
+          <div class="doYouKnow">
+            <h4>Le savais tu ?</h4>
+            <p class="doYouKnowText">
+              Plusieurs sources s’entendent pour dire que la lettre la plus
+              utilisée en français est la lettre E. En pourcentage de fréquence,
+              la lettre est utilisée à 14% dans une phrase. Et si tu regardais
+              quel symbole revient le plus souvent ?
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
-      <picture class="logo-sayna"
-        ><img
-          src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-          alt="logo de sayna"
-        />
-        <img
-          src="./images/Illustrations+Logo/All-pages/icon_x.png"
-          alt="x icon"
-        />
-        <img
-          src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-          alt="logo de marvel"
-        />
-      </picture>
-      <div class="pages">
-        <h3>PAGES</h3>
-        <ul>
-          <li>À propos</li>
-          <li>Wakanda</li>
-        </ul>
-      </div>
-      <div class="social-media-ft">
-        <h3>Retrouvez nous</h3>
-        <picture class="social-media-footer"
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-            alt="link to contact from facebook account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-            alt="link to contact from instagram account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-            alt="link to contact from twitter account"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-            alt="link to contact from tiktok account "
-          />
+      <div class="foot">
+        <picture class="logo-sayna">
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
         </picture>
+        <div class="pages">
+          <h3>PAGES</h3>
+          <ul>
+            <li>À propos</li>
+            <li>Wakanda</li>
+          </ul>
+        </div>
+        <div class="social-media-ft">
+          <h3>Retrouvez nous</h3>
+          <picture class="social-media-footer"
+            ><img
+              src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+              alt="link to contact from facebook account" /><img
+              src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+              alt="link to contact from instagram account" /><img
+              src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+              alt="link to contact from twitter account" /><img
+              src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+              alt="link to contact from tiktok account "
+          /></picture>
+          <p>
+            2022 Tous droits réservés Politique de confidentialité Conditions
+            d’utilisation
+          </p>
+        </div>
       </div>
-      <p>
-        2022 Tous droits réservés Politique de confidentialité Conditions
-        d’utilisation
-      </p>
     </footer>
   </body>
 </html>
