--- a/wakanda.html
+++ b/wakanda.html
@@ -10,19 +10,25 @@
   <body>
     <header>
       <nav>
-        <picture
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-          />
+        <picture>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
         </picture>
         <ul>
           <li><a href="./index.html">ACCUEIL</a></li>
@@ -311,19 +317,25 @@
     </main>
     <footer>
       <div class="foot">
-        <picture class="logo-sayna"
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-          />
+        <picture class="logo-sayna">
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
         </picture>
         <div class="pages">
           <h3>PAGES</h3>
@@ -375,12 +387,12 @@
               />
             </a>
           </picture>
+          <p>
+            2022 Tous droits réservés Politique de confidentialité Conditions
+            d’utilisation
+          </p>
         </div>
       </div>
-      <p>
-        2022 Tous droits réservés Politique de confidentialité Conditions
-        d’utilisation
-      </p>
     </footer>
   </body>
 </html>
