--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
   <body>
     <header>
       <nav>
-        <picture
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-          />
+        <picture>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
         </picture>
         <ul>
           <li><a href="./index.html">ACCUEIL</a></li>
@@ -66,7 +72,7 @@
           alt="pictures of black panther and his human form"
         />
       </section>
-      <div class="content-principal">
+      <div class="content-principal boxes">
         <section class="personage-wakanda">
           <div class="perso">
             <figure>
@@ -275,15 +281,26 @@
     </main>
     <footer>
       <div class="foot">
-        <picture class="logo-sayna"
-          ><img
-            src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-            alt="logo de sayna" /><img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon" /><img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-        /></picture>
+        <picture class="logo-sayna">
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
+        </picture>
         <div class="pages">
           <h3>PAGES</h3>
           <ul>
